# substrate-list-xt

./: Cargo.toml  README.md
src/: main.rs
